syntax = "proto3";

package onight.zjfae.afront.gensazj;
option java_outer_classname="DictDynamics";
//Generated By BrewRobot:Wed Sep 20 11:04:38 CST 2017

message PBAPP_dictDynamic{
	//
	message DictDynamic{
		repeated KeyAndValue keyValueList = 1;
		string dynamicType1 = 3;	 //,动态类型,String,不校验,是,
		string dynamicWeight = 4;	 //,权重,String,不校验,是,
		string model = 5;	 //,模型序列,String,不校验,是,
		string title = 6;	 //,标题,String,不校验,是,
		string remark = 7;	 //,备注,String,不校验,是,
		int32 upperLimit = 8;	 //,重复上限,int,不校验,是,
		string isSelect = 9 ; //是否下拉框,String,不校验,是,
		string required = 10;	 //,是否必填,String,不校验,是,
	}

   message KeyAndValue{
  	   string dynamicKey = 1;	 //,参数键,String,不校验,是,
	   string dynamicValue = 2;	 //,参数名/值,String,不校验,是,
   }

	repeated DictDynamic dictDynamicList = 1;


}

message Ret_PBAPP_dictDynamic{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_dictDynamic data=3;


}

message REQ_PBAPP_dictDynamic{
	//

	string dynamicType1 = 1; //,动态字典类型,String,不校验,否,


}